# AdventOfCode

./: flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: id6i196vas5irmp0sq101mjj3n6rmh0w-source  l0ppan9qhfds3qxj1aiky2j9ll55yq8r-source
2025/Day1/: solution.cabal  solution.hs
2025/Day2/: solution.hs
2025/Day3/: solution.hs
2025/Day5/: '  solution.hs  test_input
2025/Day6/: solution.hs
